<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    tools:context=".activities.StatisticsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/stat_icon" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/mplus_rounded"
                        android:text="Statistics"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/mplus_rounded"
                        android:text="@string/filter_by_date"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="365dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/input_border_light"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/StatisticsRangeInput"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:background="@null"
                            android:ems="10"
                            android:enabled="false"
                            android:fontFamily="@font/mplus_rounded"
                            android:hint="@string/dd_mm_yyyy"
                            android:inputType="text"
                            android:padding="18dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/StatisticsRangePicker"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/calender_icon" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">

                        <androidx.compose.ui.platform.ComposeView
                            android:id="@+id/compose_view"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            />

                        <androidx.compose.ui.platform.ComposeView
                            android:id="@+id/compose_view2"
                            android:layout_width="match_parent"
                            android:layout_height="400dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            />


                        <TextView
                            android:id="@+id/ProgressHours"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:fontFamily="@font/mplus_rounded"
                            android:text="@string/monthly_goal_performance"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:layout_marginStart="24dp"
                            android:layout_marginBottom="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ProgressCaption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mplus_rounded"
                            android:text="This shows how well you are keeping between your minimum and maximum goals over the past month"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="15dp"
                            android:textStyle="bold" />

                        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
                            android:id="@+id/circular_progress"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="150dp"
                            android:layout_marginTop="8dp"
                            app:progressColor="@color/purple"
                            app:progressCap="round"
                            app:progressStrokeWidth="16dp"
                            app:textColor="#3D13FB"
                            app:enableProgressAnimation="true"/>
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".activities.CategoriesActivity">

                <com.google.android.material.bottomappbar.BottomAppBar
                    android:id="@+id/bottomAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:backgroundTint="@color/transparent"
                    app:elevation="0dp"
                    app:fabCradleMargin="20dp"
                    app:fabCradleRoundedCornerRadius="50dp">

                    <com.google.android.material.bottomnavigation.BottomNavigationView
                        android:id="@+id/bottomNavigationView"
                        android:layout_width="wrap_content"
                        android:layout_height="65dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/navbar_background"
                        android:elevation="10dp"
                        app:itemIconSize="30dp"
                        app:itemIconTint="@drawable/navbar_selector"
                        app:itemTextColor="@color/white"
                        app:labelVisibilityMode="labeled"
                        app:menu="@menu/bottom_menu" />

                </com.google.android.material.bottomappbar.BottomAppBar>

            </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>