<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    tools:context=".activities.CategoriesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/timesheet_icon"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="@font/mplus_rounded"
                android:textStyle="bold"
                android:text="@string/categories" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/mplus_rounded"
                android:textStyle="bold"
                android:text="@string/filter_by_date"
                />

            <LinearLayout
                android:layout_width="365dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="20dp"
                android:background="@drawable/input_border_light"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/categoryRangeInput"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/dd_mm_yyyy"
                    android:background="@null"
                    android:inputType="text"
                    android:fontFamily="@font/mplus_rounded"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:autofillHints="" />

                <ImageView
                    android:layout_width="50dp"
                    android:id="@+id/CategoryRangePicker"
                    android:layout_height="50dp"
                    android:src="@drawable/calender_icon"
                    android:contentDescription="@string/todo" />

            </LinearLayout>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_marginStart="24dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="20dp"
                        android:id="@+id/ColorFilter"
                        android:text="Color"
                        android:backgroundTint="@color/purple"
                        android:textAllCaps="false"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:id="@+id/DescendingFilter"
                        android:layout_marginEnd="20dp"
                        android:text="Descending"
                        android:backgroundTint="@color/purple"
                        android:textAllCaps="false"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:id="@+id/AscendingFilter"
                        android:text="Ascending"
                        android:backgroundTint="@color/purple"
                        android:textAllCaps="false"
                        />

                </LinearLayout>
            </HorizontalScrollView>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:shimmer_duration="3000"
                app:shimmer_intensity="0.7">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@drawable/shimmer_background"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@drawable/shimmer_background"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@drawable/shimmer_background"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@drawable/shimmer_background"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@drawable/shimmer_background"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"/>


                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/c_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="100dp"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.CategoriesActivity">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:elevation="0dp"
            android:backgroundTint="@color/transparent"
            app:fabCradleMargin="20dp"
            app:fabCradleRoundedCornerRadius="50dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationView"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/navbar_background"
                app:labelVisibilityMode="labeled"
                android:elevation="10dp"
                app:itemIconSize="30dp"
                app:itemTextColor="@color/white"
                app:itemIconTint="@drawable/navbar_selector"
                app:menu="@menu/bottom_menu_plus" />

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/plusCat"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/add"
            app:layout_anchor="@id/bottomAppBar"
            app:maxImageSize="65dp"
            android:contentDescription="@string/todo" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

